--- a/src/view/Mainwindow.form
+++ b/src/view/Mainwindow.form
@@ -496,10 +496,10 @@
                               <Group type="102" alignment="1" attributes="0">
                                   <Group type="103" groupAlignment="1" max="-2" attributes="0">
                                       <Component id="cmbsearch" linkSize="5" min="-2" pref="24" max="-2" attributes="2"/>
-                                      <Component id="cmbtype" linkSize="5" alignment="1" pref="26" max="32767" attributes="1"/>
+                                      <Component id="cmbtype" linkSize="5" alignment="1" max="32767" attributes="1"/>
                                   </Group>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="tsearch" pref="25" max="32767" attributes="0"/>
+                                  <Component id="tsearch" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                           <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
@@ -619,14 +619,11 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="1" max="-2" attributes="0">
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="jLabel1" linkSize="1" alignment="0" pref="14" max="32767" attributes="1"/>
-                      <Component id="outof" linkSize="1" alignment="0" min="-2" pref="14" max="-2" attributes="2"/>
-                  </Group>
-                  <EmptySpace min="-2" pref="0" max="-2" attributes="0"/>
+              <Group type="103" alignment="1" groupAlignment="0" max="-2" attributes="0">
+                  <Component id="jLabel1" linkSize="1" alignment="0" max="32767" attributes="1"/>
+                  <Component id="outof" linkSize="1" alignment="0" min="-2" pref="14" max="-2" attributes="2"/>
               </Group>
-              <Component id="progres" linkSize="1" alignment="0" pref="14" max="32767" attributes="1"/>
+              <Component id="progres" linkSize="1" alignment="0" max="32767" attributes="1"/>
           </Group>
         </DimensionLayout>
       </Layout>
