--- a/src/view/Mainwindow.form
+++ b/src/view/Mainwindow.form
@@ -55,6 +55,7 @@
             <Menu class="javax.swing.JMenu" name="jMenu2">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Attendance"/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <SubComponents>
                 <MenuItem class="javax.swing.JMenuItem" name="miattstudents16">
@@ -474,6 +475,7 @@
                   <Image iconType="3" name="/images/1326818037_attendance_list.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Attendance "/>
+                <Property name="enabled" type="boolean" value="false"/>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[107, 25]"/>
                 </Property>
