--- a/src/view/regstaff.form
+++ b/src/view/regstaff.form
@@ -304,9 +304,9 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jLabel21" alignment="0" pref="88" max="32767" attributes="2"/>
-                      <Component id="jLabel15" alignment="0" pref="88" max="32767" attributes="2"/>
-                      <Component id="jLabel18" alignment="0" pref="88" max="32767" attributes="2"/>
+                      <Component id="jLabel21" alignment="0" max="32767" attributes="2"/>
+                      <Component id="jLabel15" alignment="0" max="32767" attributes="2"/>
+                      <Component id="jLabel18" alignment="0" max="32767" attributes="2"/>
                   </Group>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -319,16 +319,15 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <Group type="103" groupAlignment="1" attributes="0">
                                       <Group type="102" alignment="0" attributes="1">
-                                          <Component id="radiomarried" pref="85" max="32767" attributes="0"/>
+                                          <Component id="radiomarried" max="32767" attributes="0"/>
                                           <EmptySpace min="-2" max="-2" attributes="0"/>
-                                          <Component id="radiounmarried" pref="94" max="32767" attributes="0"/>
+                                          <Component id="radiounmarried" max="32767" attributes="0"/>
                                       </Group>
                                       <Component id="tdesignation" alignment="0" min="-2" pref="179" max="-2" attributes="2"/>
                                   </Group>
                                   <EmptySpace min="-2" pref="65" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <EmptySpace min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel19" min="-2" pref="39" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -345,7 +344,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jLabel21" alignment="3" pref="25" max="32767" attributes="0"/>
+                      <Component id="jLabel21" alignment="3" max="32767" attributes="0"/>
                       <Component id="tepfnumber" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
@@ -355,20 +354,19 @@
                   </Group>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jLabel15" alignment="3" pref="25" max="32767" attributes="0"/>
+                      <Component id="jLabel15" alignment="3" max="32767" attributes="0"/>
                       <Component id="tdesignation" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="1" pref="1" max="1" attributes="0"/>
-                          <Component id="jLabel18" pref="25" max="32767" attributes="0"/>
+                      <Component id="jLabel19" min="-2" pref="26" max="-2" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <EmptySpace min="1" pref="1" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="jLabel18" alignment="0" max="32767" attributes="0"/>
+                              <Component id="tbsalary" alignment="0" min="-2" pref="25" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="1" pref="1" max="1" attributes="0"/>
-                          <Component id="tbsalary" min="-2" pref="25" max="-2" attributes="0"/>
-                      </Group>
-                      <Component id="jLabel19" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -501,23 +499,23 @@
                       <Component id="tpassword" alignment="0" max="32767" attributes="1"/>
                       <Component id="tusername" alignment="0" min="-2" pref="189" max="-2" attributes="3"/>
                   </Group>
-                  <EmptySpace pref="128" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="bsave" pref="465" max="32767" attributes="0"/>
+                  <Component id="bsave" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jLabel9" pref="465" max="32767" attributes="0"/>
+                  <Component id="jLabel9" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" max="-2" attributes="0">
+              <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel25" linkSize="15" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
@@ -641,48 +639,38 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jLabel4" alignment="0" pref="85" max="32767" attributes="2"/>
-                      <Component id="jLabel3" alignment="0" pref="85" max="32767" attributes="2"/>
-                      <Component id="jLabel2" alignment="0" pref="85" max="32767" attributes="2"/>
-                      <Component id="jLabel5" alignment="0" pref="85" max="32767" attributes="0"/>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="jLabel6" pref="70" max="32767" attributes="0"/>
-                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="jLabel7" pref="70" max="32767" attributes="0"/>
-                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="jLabel8" max="32767" attributes="0"/>
-                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="jLabel12" pref="70" max="32767" attributes="0"/>
-                          <EmptySpace min="15" pref="15" max="15" attributes="0"/>
+                      <Component id="jLabel4" alignment="0" max="32767" attributes="2"/>
+                      <Component id="jLabel3" alignment="0" max="32767" attributes="2"/>
+                      <Component id="jLabel2" alignment="0" max="32767" attributes="2"/>
+                      <Component id="jLabel5" alignment="0" max="32767" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="jLabel6" alignment="0" max="32767" attributes="0"/>
+                              <Component id="jLabel7" alignment="0" max="32767" attributes="0"/>
+                              <Component id="jLabel8" alignment="0" max="32767" attributes="0"/>
+                              <Component id="jLabel12" alignment="0" max="32767" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="15" pref="15" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="taddno" pref="125" max="32767" attributes="0"/>
+                          <Component id="taddno" max="32767" attributes="0"/>
                           <EmptySpace min="158" pref="158" max="158" attributes="0"/>
                       </Group>
+                      <Component id="tlname" alignment="0" min="-2" pref="202" max="-2" attributes="2"/>
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="tlname" min="-2" pref="202" max="-2" attributes="2"/>
-                          <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="tcity" pref="216" max="32767" attributes="0"/>
+                          <Component id="tcity" max="32767" attributes="0"/>
                           <EmptySpace min="67" pref="67" max="67" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="tstreet" pref="208" max="32767" attributes="0"/>
+                          <Component id="tstreet" max="32767" attributes="0"/>
                           <EmptySpace min="75" pref="75" max="75" attributes="0"/>
                       </Group>
-                      <Component id="dob" alignment="0" pref="283" max="32767" attributes="0"/>
+                      <Component id="dob" alignment="0" max="32767" attributes="0"/>
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="tcontact" pref="167" max="32767" attributes="0"/>
+                          <Component id="tcontact" max="32767" attributes="0"/>
                           <EmptySpace min="116" pref="116" max="116" attributes="0"/>
                       </Group>
                       <Component id="tfname" alignment="0" min="-2" pref="229" max="-2" attributes="0"/>
@@ -696,43 +684,43 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jLabel2" alignment="3" pref="25" max="32767" attributes="0"/>
+                      <Component id="jLabel2" alignment="3" max="32767" attributes="0"/>
                       <Component id="tfname" linkSize="13" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jLabel3" alignment="3" pref="25" max="32767" attributes="0"/>
+                      <Component id="jLabel3" alignment="3" max="32767" attributes="0"/>
                       <Component id="tmname" linkSize="13" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="tlname" linkSize="13" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                      <Component id="jLabel4" alignment="3" pref="25" max="32767" attributes="0"/>
+                      <Component id="jLabel4" alignment="3" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="taddno" linkSize="13" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                      <Component id="jLabel5" alignment="3" pref="25" max="32767" attributes="0"/>
+                      <Component id="jLabel5" alignment="3" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="tstreet" linkSize="13" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                      <Component id="jLabel6" alignment="3" pref="25" max="32767" attributes="0"/>
+                      <Component id="jLabel6" alignment="3" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="tcity" linkSize="13" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                      <Component id="jLabel7" alignment="3" pref="25" max="32767" attributes="0"/>
+                      <Component id="jLabel7" alignment="3" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="jLabel8" pref="25" max="32767" attributes="2"/>
+                      <Component id="jLabel8" max="32767" attributes="2"/>
                       <Component id="dob" linkSize="13" alignment="1" min="-2" pref="25" max="-2" attributes="2"/>
                   </Group>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="tcontact" linkSize="13" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                      <Component id="jLabel12" alignment="3" pref="25" max="32767" attributes="0"/>
+                      <Component id="jLabel12" alignment="3" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
               </Group>
